﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

CONFIGS:
	- Added support for MariaDB (Debian Jessie / Ubuntu Trusty)

Tickets:
	- Fixed #1056: Bug - Incorrect value '_no_' in SQL query on create default email-accounts
	- Fixed #1065: Bug - Unable to unsuspend customer account from admin UI
	- Fixed #1066: Bug - Customer's domains remain reachable through HTTPS when they are deactivated

------------------------------------------------------------------------------------------------------------------------
1.1.5
------------------------------------------------------------------------------------------------------------------------

2014-03-27: Laurent Declercq
	- RELEASE i-MSCP 1.1.5

CONFIGS:
	- Fixed: Missing Fileinfo option in domain_ssl.tpl (Apache)
	- Fixed: Missing Indexes option in domain.tpl (Apache)

ENGINE:
	- Fixed: SQL server hostname and port must be specified when restoring database (needed for remote MySQL server)
	- Rewritten: iMSCP::Servers and iMSCP::Addons packages to avoid subsitutions

GUI:
	- Added: Check for www label which is reserved and which cause DNS errors (subdomain)
	- Added: Prefix for subdomains mount points which match with default directories
	- Added: Run-time check for php5-imap module availability
	- Added: SQL user host field to allow customers to set host from which SQL users can connect to the MySQL server
	- Fixed: 127.0.0.1 must be mapped to localhost for consistency (SQL user host)
	- Fixed: Missing check on admin_id (get_domain_default_props()) which is causing data inconsistencies
	- Fixed: Wrong url for latest.txt file

INSTALLER:
	- Fixed: 127.0.0.1 is now mapped to localhost for consistency (SQL user host)

Tickets: