@@ -99,6 +99,32 @@
                 <package>mariadb-server-10.0</package>
                 <package>libmysqlclient18</package>
             </mariadb_10.0>
+            <percona_5.5
+                    pinning_package="percona-client-5.5 percona-server-5.5 percona-server-common libmysqlclient18"
+                    pinning_pin="origin repo.percona.com"
+                    pinning_pin_priority="1001"
+                    repository="deb http://repo.percona.com/apt saucy main"
+                    repository_origin="Percona"
+                    repository_key_srv="keys.gnupg.net"
+                    repository_key_id="1C4CBDCDCD2EFD2A"
+                    >
+                <package>percona-server-client-5.5</package>
+                <package>percona-server-server-5.5</package>
+                <package>libmysqlclient18</package>
+            </percona_5.5>
+            <percona_5.6
+                    pinning_package="percona-client-5.6 percona-server-5.6 percona-server-common libmysqlclient18.1"
+                    pinning_pin="origin repo.percona.com"
+                    pinning_pin_priority="1001"
+                    repository="deb http://repo.percona.com/apt saucy main"
+                    repository_origin="Percona"
+                    repository_key_srv="keys.gnupg.net"
+                    repository_key_id="1C4CBDCDCD2EFD2A"
+                    >
+                <package>percona-server-client-5.6</package>
+                <package>percona-server-server-5.6</package>
+                <package>libmysqlclient18.1</package>
+            </percona_5.6>
             <remote_server>
                 <package>mysql-client</package>
             </remote_server>
